<resources>
    <string name="app_name">SQLite</string>
    <string name="company_name">Industry Name</string>
    <string name="description">About</string>
    <string name="founded_date_e_g_23_04_2016">Invention Date (e.g 03/06/1998)</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="employee_first_name">First Name</string>
    <string name="employee_last_name">Last Name</string>
    <string name="date_of_birth_e_g_23_04_2016">D.O.B (e.g 03/06/1998)</string>
    <string name="job_description">Job Description</string>
    <string name="employed_date_e_g_23_04_2016">Joined Date (e.g 03/06/1998)</string>
    <string name="employer_name">Employer Name</string>
</resources>
