<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/two">

        <RelativeLayout
            android:id="@+id/activity_first"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.vijaya.sqlite.EmployerActivity"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Industry Name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/descInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameInputLayout"
                android:hint="@string/description">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/descEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/foundedInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descInputLayout"
                android:hint="@string/founded_date_e_g_23_04_2016">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/foundedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/foundedInputLayout"
                android:layout_alignParentRight="true"
                android:layout_marginTop="18dp"
                android:layout_marginRight="28dp"
                android:layout_marginBottom="30dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/foundedInputLayout"
                android:layout_marginTop="84dp"
                android:layout_marginRight="-87dp"
                android:layout_marginBottom="30dp"
                android:layout_toLeftOf="@id/saveButton"
                android:text="@string/update" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foundedInputLayout"
                android:layout_alignStart="@+id/searchButton"
                android:layout_alignLeft="@+id/searchButton"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="81dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/foundedInputLayout"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"
                android:text="@string/search" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/saveButton"
                android:layout_marginTop="50dp" />

        </RelativeLayout>
    </ScrollView>
</layout>